--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "serverless-ci-cd",
+  "name": "sls-ci-cd",
   "version": "1.0.0",
   "description": "Demo Serverless project using CodeBuild and CodePipeline for CI/CD. Tutorial available at http://www.1strategy.com/blog/.",
   "main": "handler.js",
@@ -9,15 +9,11 @@
     "integration": "jest __tests__/integration/*"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/1Strategy/serverless-ci-cd.git"
+    "type": "git"
   },
-  "author": "1Strategy",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/1Strategy/serverless-ci-cd/issues"
   },
-  "homepage": "https://github.com/1Strategy/serverless-ci-cd#readme",
   "devDependencies": {
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
