--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,9 @@
 version: 0.2
 
+env:
+  parameter-store:
+    buildNumber: '/build-number/x-test'
+
 phases:
   install:
     commands:
@@ -14,6 +18,7 @@ phases:
   build:
     commands:
       # linting and unit tests
+      - echo The current build number is $buildNumber
       - npm run-script lint
       - npm test
       # deploy integration testing environment
